--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-throw-literal": "off"
+      // Add other rules you want to disable or modify
+    }
   },
   "browserslist": {
     "production": [
